# classroom_service_yt

./: README.md  buildspec.yml  notes.txt  requirements.txt
.github/workflows/: comment-pr.yml  test.yml
user_crud/: .env.example  pyproject.toml
user_crud/src/user_crud/: main.py
user_crud/src/user_crud/domain/: entities.py
user_crud/src/user_crud/server/: app.py  database.py
user_crud/src/user_crud/server/models/: student.py
user_crud/src/user_crud/server/routes/: student.py
user_crud/tests/: test_entities.py  test_user_crud.py
